--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -15,6 +16,7 @@
     "@mui/material": "^5.11.15",
     "@mui/styled-engine-sc": "^5.11.11",
     "geojson": "^0.5.0",
+    "gh-pages": "^5.0.0",
     "mapbox-gl": "^2.13.0",
     "plotly.js": "^2.20.0",
     "postcss": "^8.4.21",
