--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.8.0",
     "react-map-gl": "^7.0.21",
     "react-plotly.js": "^2.6.0",
+    "react-vis": "^1.12.1",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
